<resources>
    <string name="app_name">Puddle</string>
    <string name="about">About</string>
    <string name="chat">Chat</string>
    <string name="members">Members</string>
    <string name="events">Events</string>
    <string name="home">HOME</string>
    <string name="map">MAP</string>
    <string name="settings">SETTINGS</string>
    <string name="bgimg">BGIMG</string>
    <string name="openeventdialog">OPENEVENTDIALOG</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="by_location">By Location</string>
    <string name="date">Date</string>
    <string name="send_your_message">Send your message</string>
    <string name="start_date">Start Date</string>
    <string name="distance">Distance</string>
    <string name="filter_by">Filter By:</string>
    <string name="helper_text_login">Max Length: 15 characters</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="profile_img" />
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="unrsvp">You\'ve already RSVPed for this event!</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="users">Users</string>
    <string name="chats">chats</string>
    <string name="user_name">username</string>
    <string name="_0">0</string>
    <string name="save">Save</string>
    <string name="display_name">Display Name</string>
    <string name="bio">Bio</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>

    <string name="google_maps_api_key">AIzaSyDTbzxCT5jOJFnvWSRrQzlMJi97daSIDwg</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="education">Education</string>
    <string name="travel">Travel</string>
    <string name="finance">Finance</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="share_puddle">Share Puddle</string>
    <string name="filter_by_membership">Filter By Membership</string>
    <string name="filter_by_category">Filter By Category</string>
    <string name="example_username_here">example username here</string>

</resources>