<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/chatroom_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:tabMode="fixed"
        app:tabUnboundedRipple="false"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/chat_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/about_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/members_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members" />


        <com.google.android.material.tabs.TabItem
            android:id="@+id/events_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/bottom_nav"
            layout="@layout/bottom_nav_bar" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/openeventdialog"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>