<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="@dimen/icon_size_lg"
            android:layout_height="@dimen/icon_size_lg"
            android:layout_gravity="center"
            android:src="@drawable/icon_puddle" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xl"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_xl"
            android:hint="@string/username"
            android:textColorHint="@color/login_signup_text_color"
            app:boxStrokeWidth="3dp"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:counterOverflowTextColor="@android:color/holo_red_light"
            app:counterTextAppearance="@style/HelperTextAppearance"
            app:helperText="@string/helper_text_login"
            app:helperTextEnabled="true"
            app:helperTextTextAppearance="@style/HelperTextAppearance"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/account_circle"
            app:startIconTint="@color/login_signup_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_mid"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xl"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_xl"
            android:hint="Password"
            android:textColorHint="@color/login_signup_text_color"
            app:boxStrokeWidth="3dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/password"
            app:startIconTint="@color/login_signup_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_mid"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:backgroundTint="@color/login_signup_button_background"
                android:text="@string/login"
                android:textColor="@color/login_signup_text_color"
                android:textSize="@dimen/font_size_mid"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_signup"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:backgroundTint="@color/login_signup_button_background"
                android:text="@string/signup"
                android:textColor="@color/login_signup_text_color"
                android:textSize="@dimen/font_size_mid"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>