<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/add_event_toolbar"
        layout="@layout/toolbar" />


    <EditText
        android:id="@+id/add_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/rectangle"
        android:hint="Add Title"
        android:padding="10sp"
        android:textColorHint="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/add_event_dialog_exit_button"
        app:layout_constraintTop_toBottomOf="@+id/add_event_toolbar" />

    <View
        android:background="@color/purple_700"
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/radio_button_group" />

    <EditText
        android:id="@+id/dialog_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/rectangle"
        android:hint="@string/description"
        android:minHeight="48dp"
        android:padding="10sp"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:layout_editor_absoluteX="20dp" />


    <View
        android:background="@color/purple_700"
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_description_edit_text" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:src="@drawable/time_icon"
        app:layout_constraintStart_toStartOf="@+id/dialog_description_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/starting_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/ending_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/starting_time_text_view"
        app:layout_constraintTop_toBottomOf="@+id/starting_time_text_view" />


    <TextView
        android:id="@+id/ending_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/ending_time_text_view"
        app:layout_constraintStart_toStartOf="@+id/starting_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/starting_time_text_view" />

    <TextView
        android:id="@+id/starting_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/starting_time_text_view"
        app:layout_constraintTop_toTopOf="@+id/starting_time_text_view" />

    <Button
        android:id="@+id/add_event_dialog_exit_button"
        android:layout_width="32sp"
        android:layout_height="32sp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:visibility="invisible"
        android:background="@drawable/close_icon"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_button_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title_edit_text">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="25sp"
            android:text="@string/online"
            app:layout_constraintEnd_toStartOf="@+id/offline_radio_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

        <RadioButton
            android:id="@+id/offline_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="25sp"
            android:text="@string/offline"
            app:layout_constraintBottom_toBottomOf="@+id/radioButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />
    </RadioGroup>


    <View
        android:background="@color/purple_700"
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10sp"
        app:layout_constraintTop_toBottomOf="@id/ending_date_text_view" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:src="@drawable/add_location_icon"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/view3" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Add Location"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/add_event_save_button"
        style="@style/Theme.NUMAD22Su_Team24_Puddle.CustomButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10sp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:layout_marginTop="10sp"
        android:id="@+id/add_new_bg_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_image_icon"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:layout_margin="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Background Image"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_new_bg_image"
        app:layout_constraintStart_toEndOf="@+id/add_new_bg_image"
        app:layout_constraintTop_toTopOf="@+id/add_new_bg_image" />
    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10sp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/add_new_bg_image" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">





        <include
            android:id="@+id/bottom_nav"
            layout="@layout/bottom_nav_bar" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>